cleaner code ticket services