@@ -65,28 +65,42 @@ public class TicketService {
     }
 
     public List<TicketDTO> getTicketsByMainTicketId(Integer mainTicketId) {
-//        return ticketMapper.toDtoList(ticketRepo.findByTicketId(mainTicketId));
-        Optional<Ticket> mainTicketOpt = ticketRepo.findById(mainTicketId);
+//        Optional<Ticket> mainTicketOpt = ticketRepo.findById(mainTicketId);
+//
+//        if (mainTicketOpt.isEmpty()) {
+//            return Collections.emptyList();
+//        }
+//
+//        Ticket mainTicket = mainTicketOpt.get();
+//        List<Ticket> ticketList = new ArrayList<>();
+//
+//        if (mainTicket.getTicket() != null) {
+//            Integer actualMainTicketId = mainTicket.getTicket().getId();
+//            Ticket actualMainTicket = ticketRepo.getReferenceById(actualMainTicketId);
+//            ticketList.addAll(ticketRepo.findByTicketId(actualMainTicketId));
+//            ticketList.add(actualMainTicket);
+//        } else {
+//            ticketList.addAll(ticketRepo.findByTicketId(mainTicketId));
+//            ticketList.add(mainTicket);
+//        }
+//
+//        List<Ticket> sortedTickets = ticketList.stream().sorted(Comparator.comparing(Ticket::getId)).toList();
+//
+//        return ticketMapper.toDtoList(sortedTickets);
 
-        if (mainTicketOpt.isEmpty()) {
-            return Collections.emptyList();
-        }
+        return ticketRepo.findById(mainTicketId)
+                .map(mainTicket -> {
+                    List<Ticket> ticketList = new ArrayList<>();
 
-        Ticket mainTicket = mainTicketOpt.get();
-        List<Ticket> ticketList = new ArrayList<>();
+                    Ticket rootTicket = mainTicket.getTicket() != null ? mainTicket.getTicket() : mainTicket;
+                    ticketList.addAll(ticketRepo.findByTicketId(rootTicket.getId()));
+                    ticketList.add(rootTicket);
 
-        if (mainTicket.getTicket() != null) {
-            Integer actualMainTicketId = mainTicket.getTicket().getId();
-            Ticket actualMainTicket = ticketRepo.getReferenceById(actualMainTicketId);
-            ticketList.addAll(ticketRepo.findByTicketId(actualMainTicketId));
-            ticketList.add(actualMainTicket);
-        } else {
-            ticketList.addAll(ticketRepo.findByTicketId(mainTicketId));
-            ticketList.add(mainTicket);
-        }
-
-        List<Ticket> sortedTickets = ticketList.stream().sorted(Comparator.comparing(Ticket::getId)).toList();
-
-        return ticketMapper.toDtoList(sortedTickets);
+                    return ticketList.stream()
+                            .sorted(Comparator.comparing(Ticket::getId))
+                            .collect(Collectors.toList());
+                })
+                .map(ticketMapper::toDtoList)
+                .orElse(Collections.emptyList());
     }
 }
